# end-to-end-hotel-analytics-bigquery-dbt

./: README.md
hotel-analytics-pipeline/: Dockerfile  README.md  from google.py
hotel-analytics-pipeline/.astro/: config.yaml
hotel-analytics-pipeline/dags/: dag_airflow_hotel.py
hotel-analytics-pipeline/hotel_dbt/: dbt_project.yml
hotel-analytics-pipeline/hotel_dbt/models/: sources.yml
hotel-analytics-pipeline/hotel_dbt/models/marts/: fct_bookings.sql  (+4 more)
hotel-analytics-pipeline/ingestion/: generate_report.py  load_kaggle_to_bigquery.py
hotel-analytics-pipeline/revenue-cancellation/: main.py  pyproject.toml
hotel-analytics-pipeline/revenue-cancellation/.astro/: config.yaml
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/: dbt_project.yml
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/models/: sources.yml
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/models/marts/: dim_customers.sql  dim_products.sql  fct_order_items.sql  fct_orders.sql  schema.yml
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/models/marts/analytics/: cancel_metrics.sql  customers_metrics.sql  daily_sales.sql  schema.yml
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/models/staging/: stg_cancelamentos.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
hotel-analytics-pipeline/revenue-cancellation/ecommerce_dbt/seeds/: .gitkeep
hotel-analytics-pipeline/revenue-cancellation/include/: .user.yml  profiles.yml
hotel-analytics-pipeline/revenue-cancellation/scripts/: generate_fake_data.py
(+2 files in other folders)
